# acorn

./: .ackrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  WINDOWS.md  crossbuild.sh  publish.sh  upload.sh  winbuild.bat
.cargo/: config.toml
.github/workflows/: build-onnxruntime.yml  release-windows.yml  run-tests.yml
python/: model.py  tag.py  version.py
scripts/: crossbuild.sh  publish.sh  release.sh  upload.sh
src/: acorn_type.rs  acorn_value.rs  active_set.rs  atom.rs  binding_map.rs  block.rs  build_cache.rs  builder.rs  clause.rs  clause_set.rs  code_gen_error.rs  code_generator.rs  compilation.rs  constant_map.rs  constant_name.rs  dataset.rs  display.rs  doc_generator.rs  environment.rs  evaluator.rs  expression.rs  fact.rs  fingerprint.rs  goal.rs  interfaces.rs  lib.rs  literal.rs  live_document.rs  module.rs  module_cache.rs  monomorphizer.rs  named_entity.rs  names.rs  normalization_map.rs  normalizer.rs  ort_model.rs  passive_set.rs  pattern_tree.rs  potential_value.rs  project.rs  (+25 more)
src/environment/: add_statement.rs  env_base.rs  mod.rs
src/tests/: common.rs  env_misc.rs  env_misc_test.rs  env_parsing.rs  env_parsing_test.rs  env_typeclass.rs  env_typeclass_test.rs  mod.rs  project_test.rs  prover.rs  prover_core_test.rs  prover_language_test.rs  prover_test.rs  statement_test.rs
tests/: env_misc.rs  env_typeclass.rs  environment.rs  environment_test.rs  prover.rs  prover_test.rs
tests/common/: mod.rs
vscode/: .ackrc  interfaces.d.ts
vscode/assistant/: index.html  tsconfig.json  vite.config.ts
(+26 files in other folders)
